--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"/>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	id="WebApp_ID" version="3.0">
+	<display-name>EnvioEmail</display-name>
+	<welcome-file-list>
+		<welcome-file>FormularioContato.html</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<servlet-name>contato</servlet-name>
+		<servlet-class>br.com.envioemail.servlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>contato</servlet-name>
+		<url-pattern>/formulariocontato</url-pattern>
+	</servlet-mapping>
+</web-app>
